refactor: made some code more readable